# ShellDroid

./: .env.example  .gitignore  Dockerfile.dev  README.md  docker-compose.yml  docker-gradle.sh  gradle.properties  gradlew  gradlew.bat  release.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/io/shelldroid/: MainActivity.kt  ShellDroidApp.kt
app/src/main/java/io/shelldroid/nav/: ShellDroidNavHost.kt
app/src/main/java/io/shelldroid/ui/lock/: LockScreen.kt
app/src/main/java/io/shelldroid/ui/settings/: KnownHostsScreen.kt  KnownHostsViewModel.kt  LicensesScreen.kt  SettingsScreen.kt  SettingsViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
core/db/: build.gradle.kts
core/db/schemas/io.shelldroid.core.db.AppDatabase/: 1.json  2.json  3.json
core/db/src/androidTest/java/io/shelldroid/core/db/: AppDatabaseTest.kt  DbTest.kt
core/db/src/main/java/io/shelldroid/core/db/: AppDatabase.kt  AppPreferences.kt  Converters.kt  CurrentUserProvider.kt  DbModule.kt  Enums.kt  UserPrefsDataStore.kt
core/security/: build.gradle.kts
core/security/src/androidTest/java/io/shelldroid/core/security/: CredentialVaultTest.kt  LockManagerTest.kt  Utf8UtilsTest.kt
core/security/src/main/java/io/shelldroid/core/security/: AutoLockObserver.kt  BiometricGate.kt  CredentialVault.kt  LockManager.kt  SecurityDataStore.kt  SecurityModule.kt  Utf8Utils.kt
core/ssh/: build.gradle.kts
core/ssh-native/: CMakeLists.txt  build.gradle.kts
core/ssh-native/cmake/: FindMbedTLS.cmake
core/ssh-native/src/main/cpp/: shelldroid_ssh.c
core/ssh-native/src/main/java/io/shelldroid/ssh/native_/: LibSsh.kt
core/ssh/src/main/java/io/shelldroid/core/ssh/: HostConnector.kt  LibSshClient.kt  PendingAutoCommand.kt  PortForwardManager.kt  SessionServiceController.kt  SshExceptions.kt  SshModule.kt  SshSessionManager.kt  TofuHostKeyVerifier.kt
core/ssh/src/test/java/io/shelldroid/core/ssh/: AuthMethodTest.kt  MinaSshdSmokeTest.kt  SshIntegrationTestBase.kt  SshSessionManagerTest.kt  TofuHostKeyVerifierTest.kt
core/ui/: build.gradle.kts
core/ui/src/main/java/io/shelldroid/core/ui/: Theme.kt
core/ui/src/main/res/values/: strings.xml
core/ui/src/main/res/values-en/: strings.xml
docs/: CNAME  dev-deploy.md  play-store-release-playbook.md  privacy-policy.html
feature/hosts/: build.gradle.kts
feature/hosts/src/main/java/io/shelldroid/feature/hosts/: HostEditScreen.kt  HostEditViewModel.kt  HostKeyDialog.kt  HostsListViewModel.kt  HostsScreen.kt
feature/hosts/src/test/java/io/shelldroid/feature/hosts/: HostRepositoryTest.kt  HostsListViewModelTest.kt  IdentityRepositoryTest.kt
feature/identities/: build.gradle.kts
feature/identities/src/main/java/io/shelldroid/feature/identities/: IdentitiesListViewModel.kt  IdentitiesScreen.kt  IdentityEditScreen.kt  IdentityEditViewModel.kt
feature/portforward/: build.gradle.kts
feature/snippets/: build.gradle.kts
feature/terminal/: build.gradle.kts
gradle/: libs.versions.toml
scripts/play-store/: upload_aab.py
service/session/: build.gradle.kts
service/session/src/main/res/drawable/: ic_notification.xml
(+63 files in other folders)
